--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="desc-content">
         <img src="./imgs/logo.png" alt="Poplar">
         <div class="name">
-          <p>豆瓣·电影生活日历</p>
+          <p>电影生活日历</p>
         </div>
       </div>
 
